besar-besaran transgeo

--- a/matriks/soal/kisikisiulangan.html
+++ b/matriks/soal/kisikisiulangan.html
@@ -57,14 +57,8 @@
       <div class="container pb-3">
         <div class="row">
           <div class="col-md-9" style="padding-top: 5rem">
-        <div class="row mb-3">
-          <div class="col text-center">
-            <h2>Kisi-kisi Ulangan Matriks</h2>
-            <i>Math_Dosman</i>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-md-12">
+              <h2 class="text-center">Kisi-kisi Ulangan Matriks</h2>
+              <p class="fst-italic text-center"> Math_Dosman</p>
             <form name="matrikskisikisi-form">
               <div class="mb-3">
                 <label for="absen" class="form-label"><b> No Absen </b></label>
@@ -451,8 +445,6 @@
                 </div>
               </div>
             </form>
-          </div>
-        </div>
           </div>
           <div class="col-md-3">
             <div class="sticky-top" style="padding-top: 5rem">
