--- a/transformasi/daftarsoal.html
+++ b/transformasi/daftarsoal.html
@@ -125,7 +125,6 @@
               <a href="#" class="list-group-item list-group-item-action">Latihan Refleksi</a>
               <a href="#" class="list-group-item list-group-item-action">Latihan Rotasi</a>
               <a href="#" class="list-group-item list-group-item-action">Latihan Dilatasi</a>
-              <a href="#" class="list-group-item list-group-item-action">Latihan Transformasi suatu Kurva</a>
               <a href="#" class="list-group-item list-group-item-action">Latihan Transformasi Komposisi</a>
               <a href="#" class="list-group-item list-group-item-action">Latihan Transformasi Geometri 1</a>
               <a href="#" class="list-group-item list-group-item-action">Latihan Transformasi Geometri 2</a>
@@ -133,7 +132,7 @@
           </div>
           <div class="col-md-3 d-block pb-2">
             <div class="list-group sticky-sm-top" style="padding-top: 5rem">
-              <a href="../index.html" class="list-group-item list-group-item-action active" aria-current="true"> HOME mathdosman.site </a>
+              <a href="/transformasi/" class="list-group-item list-group-item-action active" aria-current="true"> Materi Transformasi </a>
               <a href="/transformasi/translasi.html" class="list-group-item list-group-item-action">Translasi</a>
               <a href="/transformasi/refleksi.html" class="list-group-item list-group-item-action">Refleksi</a>
               <a href="/transformasi/rotasi.html" class="list-group-item list-group-item-action">Rotasi</a>
