--- a/transformasi/latihansoal/transgeo1.html
+++ b/transformasi/latihansoal/transgeo1.html
@@ -27,7 +27,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <title>soal translasi</title>
+    <title>soal transformasi geometri 1</title>
   </head>
   <body id="home">
     <!-- navbar start -->
@@ -57,14 +57,14 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-9" style="padding-top: 5rem;">
-            <h2 class="text-center">Latihan Soal Translasi</h2>
+            <h2 class="text-center">Latihan Soal <br> Transformasi Geometri II </h2>
            <p class="text-center fst-italic"> Math_Dosman</p>
             <form name="translasi01-form">
               <div class="mb-3">
                     <label for="materi" class="form-label"><b>Materi</b></label>
                     <select type="text" id="materi" name="materi" class="form-control" aria-placeholder="materi" required>
                     <option value="">-- Pilih Materi --</option>
-                    <option value="Translasi">Translasi</option>
+                    <option value="TransformasiGeometri1">Transformasi Geometri I</option>
                     </select>
                 </div>
               <div class="mb-3">
@@ -91,257 +91,259 @@
               <hr />
 
               <ol type="1">
-                <li>Tentukan hasil bayangan titik \(A(3,5) \) oleh translasi \(T\begin{pmatrix}-2 \\ 4 \end{pmatrix}\)!</li>
+                <li>SOAL 1</li>
                 <input type="radio" name="soal1" value="0" />
-                \(A'(5, 1) \)
+                \(A \)
                 <br />
                 <input type="radio" name="soal1" value="0" />
-                \(A'(3, 7) \)
+                \(B \)
                 <br />
                 <input type="radio" name="soal1" value="0"  />
-                \(A'(7, -1) \)
+                \(C \)
                 <br />
                 <input type="radio" name="soal1" value="0" />
-                \(A'(7, 3) \)
+                \(D \)
                 <br />
                 <input type="radio" name="soal1" value="10" id="soal1"/>
-                \(A'(1, 9) \)
+                \(E \)
                 <hr />
                 <!--========================= soal no 2 ===========================================================================-->
-                <li>Diketahui titik \(P'(4,-12)\) adalah bayangan titik \(P\) oleh translasi \(T=\begin{pmatrix}-9 \\ 8 \end{pmatrix} \). Koordinat titik \(P\) adalah . . .</li>
+                <li>SOAL 2</li>
                 <input type="radio" name="soal2" value="10" id="soal2" />
-                \((13, -20)\)
+                \(A\)
                 <br />
                 <input type="radio" name="soal2" value="0" />
-                \((13,-4) \)
+                \(B \)
                 <br />
                 <input type="radio" name="soal2" value="0"  />
-                \((4,20) \)
+                \(C \)
                 <br />
                 <input type="radio" name="soal2" value="0" />
-                \((-5, -4) \)
+                \(D \)
                 <br />
                 <input type="radio" name="soal2" value="0" />
-                \((-5, -20) \)
+                \(E \)
                 <hr />
                 <!--================================================== soal no 3 ======================================================-->
-                <li>Titik \(A\) ditranslasikan oleh \(T=\begin{pmatrix}6 \\ -3 \end{pmatrix}\) menghasilkan titik \(A'(4,-2) \). Koordinat titik \(A\) adalah . . . </li>
+                <li>SOAL 3 </li>
                 <input type="radio" name="soal3" value="0"  />
-                \((10, -5) \)
+                \(A \)
                 <br />
                 <input type="radio" name="soal3" value="0"  />
-                \((10, 1) \)
+                \(B \)
                 <br />
                 <input type="radio" name="soal3" value="0" />
-                \((2,-1) \)
+                \(C \)
                 <br />
                 <input type="radio" name="soal3" value="10" id="soal3"/>
-                \((-2, 1) \)
+                \(D \)
                 <br />
                 <input type="radio" name="soal3" value="0" />
-                \((-2, -1) \)
+                \(E \)
                 <hr />
                 <!-- soal no no4 =================================================================================================-->
-                <li>Diketahui translasi \(T \) memetakan titik \(C(-4,2) \) ke titik \(C'(-1, 6) \). Translasi \(T\) akan memetakan titik \(D(3,-2) \) ke titik . . . </li>
+                <li>SOAL 4 </li>
                 </li>
                 <input type="radio" name="soal4" value="0" />
-                \(D'(0,4) \)
+                \(A\)
                 <br />
                 <input type="radio" name="soal4" value="0" />
-                \(D'(0,2) \)
+                \(B \)
                 <br />
                 <input type="radio" name="soal4" value="0" />
-                \(D'(0,-6) \)
+                \(C \)
                 <br />
                 <input type="radio" name="soal4" value="0"  />
-                \(D'(6,-6) \)
+                \(D \)
                 <br />
                 <input type="radio" name="soal4" value="10" id="soal4">
-                \(D'(6,2) \)
+                \(E \)
                 <hr />
                 <!-- soal no 5 ================================================================================================-->
-                <li>Segitiga \(PQR\) mempunyai koordinat \(P(-3,4) \), \(Q(-1,0)\) dan \(R(0,2) \). Segitiga ditranslasikan oleh \(T\) menghasilkan bayangan segitiga \(P'Q'R'\). Jika koordinat titik \(P'(1,-2) \), koordinat titik \(Q'\) dan \(R'\) berturut-turut adalah . . . </li>
+                <li>SOAL 5 </li>
                 <input type="radio" name="soal5" value="10" id="soal5"/>
-                \((3,-6) \) dan \((4,-4) \)
+                \(A\)
                 <br />
                 <input type="radio" name="soal5" value="0" />
-                \((3,-6) \) dan \((-4,4) \)
+                \(B\)
                 <br />
                 <input type="radio" name="soal5" value="0"   />
-                \((-3,6) \) dan \((4,-4) \)
+                \(C\)
                 <br />
                 <input type="radio" name="soal5" value="0"/>
-                \((-3,6) \) dan \((-4,4) \)
+                \(D\)
                 <br />
                 <input type="radio" name="soal5" value="0" />
-                \((-3,-6) \) dan \((4,-4) \)
+                \(E\)
                 <hr />
                 <!-- =====SOAL NO 6======================================================================= -->
-                <li>Diketahui titik \(P'(3,-13) \) adalah bayangan titik \(P\) oleh translasi \(T=\begin{pmatrix}-10\\7 \end{pmatrix} \). Koordinat titik \(P\) adalah . . . </li>
+                <li>SOAL 6</li>
                 <input type="radio" name="soal6" value="10" id="soal6" />
-                \((13,-20) \)
+                \(A \)
                 <br />
                 <input type="radio" name="soal6" value="0" />
-                \((13,-4) \)
+                \(B \)
                 <br />
                 <input type="radio" name="soal6" value="0" />
-                \((4,20) \)
+                \(C \)
                 <br />
                 <input type="radio" name="soal6" value="0" />
-                \((-5,-4) \)
+                \(D \)
                 <br />
                 <input type="radio" name="soal6" value="0" />
-                \((-5,-20) \)
+                \(E \)
                 <hr />
                 <!-- =====SOAL NO 7======================================================================= -->
-                <li>Titik \(A(7, -6)\) ditranslasikan oleh \(T = (-2, 4)\), maka koordinat titik \(A'\) adalah . . .</li>
+                <li>SOAL 7</li>
                 <input type="radio" name="soal7" value="0" />
-                \((9, -10) \)
+                \(A \)
                 <br />
                 <input type="radio" name="soal7" value="0" />
-                \((-5,-2)\)
+                \(B\)
                 <br />
                 <input type="radio" name="soal7" value="10" id="soal7"/>
-                \((5,-2)\)
+                \(C\)
                 <br />
                 <input type="radio" name="soal7" value="0"  />
-                \((-9,10)\)
+                \(D\)
                 <br />
                 <input type="radio" name="soal7" value="0" />
-                \((10,9)\)
+                \(E\)
                 <hr />
                 <!-- =====SOAL NO 8======================================================================= -->
-                <li>Jika titik \(G'(4, -1)\) adalah bayangan titik dari \(G(7, -5)\) oleh translasi \(T\), maka nilai \(T\) adalah . . . </li>
+                <li>SOAL 8 </li>
                 <input type="radio" name="soal8" value="0" />
-                \((2,5) \)
+                \(A \)
                 <br />
                 <input type="radio" name="soal8" value="10" id="soal8"/>
-                \((-3,4) \)
+                \(B \)
                 <br />
                 <input type="radio" name="soal8" value="0"  />
-                \((1,7) \)
+                \(C \)
                 <br />
                 <input type="radio" name="soal8" value="0"  />
-                \((4,2) \)
+                \(D \)
                 <br />
                 <input type="radio" name="soal8" value="0" />
-                \((-2,3) \)
+                \(E \)
                 <hr />
                 <!-- =====SOAL NO 9======================================================================= -->
-                <li>Diketahui koordinat titik \(P\) adalah \((2c,3)\). Oleh karena translasi \(\begin{pmatrix}c\\-3\end{pmatrix} \) diperoleh bayangan titik \(P\) yaitu \(P'(3,0) \), maka nilai \(c\) adalah . . . </li>
+                <li>SOAL 9 </li>
                 <input type="radio" name="soal9" value="0" />
-                \(-3\)
+                \(A\)
                 <br />
                 <input type="radio" name="soal9" value="0" />
-                \(-2\)
+                \(B\)
                 <br />
                 <input type="radio" name="soal9" value="10"  />
-                \(-1\)
+                \(C\)
                 <br />
                 <input type="radio" name="soal9" value="10" id="soal9"/>
-                \(1\)       <br />
+                \(D\)       <br />
                 <input type="radio" name="soal9" value="0" />
-                \(2\)
+                \(E\)
                 <hr />
                 <!-- =====SOAL NO 10======================================================================= -->
-                <li>Diketahui koordinat titik \(P\) adalah \((4,-1)\). Oleh karena translasi \(\begin{pmatrix}2\\a\end{pmatrix} \) diperoleh bayangan titik \(P\) yaitu \(P'(-2a,-4) \), maka nilai \(a\) adalah . . . </li>
+                <li>SOAL 10 </li>
                 <input type="radio" name="soal10" value="10" id="soal10" />
-                \(-3\)
+                \(A\)
                 <br />
                 <input type="radio" name="soal10" value="0" />
-                \(-1\)
+                \(B\)
                 <br />
                 <input type="radio" name="soal10" value="0" />
-                \(0\)
+                \(C\)
                 <br />
                 <input type="radio" name="soal10" value="0" />
-                \(1\)
+                \(D\)
                 <br />
                 <input type="radio" name="soal10" value="0" />
-                \(3\)
+                \(E\)
                 <hr />
-                <li>Jika garis \(2x-3y+7=0\) ditranslasikan oleh \(\begin{pmatrix}-2\\3 \end{pmatrix} \), bayangannya berbentuk . . . </li>
+
+                <li>SOAL 11</li>
                 <input type="radio" name="soal11" value="10" id="soal11" />
-                \(2x-3y+20=0\)
+                \(A \)
                 <br />
                 <input type="radio" name="soal11" value="0" />
-                \(2x-3y+13=0\)
+                \(B \)
                 <br />
                 <input type="radio" name="soal11" value="0" />
-                \(2x-3y+6=0\)
+                \(C \)
                 <br />
                 <input type="radio" name="soal11" value="0" />
-                \(3x-2y+13=0\)
+                \(D \)
                 <br />
                 <input type="radio" name="soal11" value="0" />
-                \(3x-2y+20=0\)
+                \(E \)
                 <hr />
-                <li>Bayangan dari lingkaran \((x-3)^2+(y+4)^2 =9 \) karena translasi \(\begin{pmatrix}2\\1 \end{pmatrix}\) adalah . . . </li>
+
+                <li>SOAL 12 </li>
                 <input type="radio" name="soal12" value="0" />
-                \(x^2 + y^2 -10x +6y +9 =0\)
+                \(A \)
                 <br />
                 <input type="radio" name="soal12" value="0" />
-                \(x^2 + y^2 -10x +6y +16 =0\)
+                \(B \)
                 <br />
                 <input type="radio" name="soal12" value="10" id="soal12"  />
-                \(x^2 + y^2 -10x +6y +25 =0\)
+                \(C \)
                 <br />
                 <input type="radio" name="soal12" value="0" />
-                \(x^2 + y^2 -6x +10y +25 =0\)
+                \(D \)
                 <br />
                 <input type="radio" name="soal12" value="0" />
-                \(x^2 + y^2 -6x +10y +16 =0\)
+                \(E \)
                 <hr />
 
-                <li> Jika parabola \(y=-x^2-4x+7\) ditranslasikan oleh \(\begin{pmatrix}-1\\-3 \end{pmatrix} \), bayangannya berbentuk . . . </li>
+                <li> SOAL 13 </li>
                 <input type="radio" name="soal13" value="0"  />
-                \(y=x^2-6x-1 \)
+                \(A \)
                 <br />
                 <input type="radio" name="soal13" value="0" />
-                \(y=x^2+6x-1 \)
+                \(B \)
                 <br />
                 <input type="radio" name="soal13" value="10" id="soal13"/>
-                \(y=-x^2-6x-1 \)
+                \(C \)
                 <br />
                 <input type="radio" name="soal13" value="0" />
-                \(y=x^2+6x+1 \)
+                \(D \)
                 <br />
                 <input type="radio" name="soal13" value="0" />
-                \(y=-x^2+6x+1 \)
+                \(E \)
                 <hr />
 
-                <li>Bayangan dari lingkaran \((x-2)^2+(y+4)^2 =7 \) karena translasi \(\begin{pmatrix}-5\\-2 \end{pmatrix}\) adalah . . .  </li>
+                <li>SOAL 14</li>
                 <input type="radio" name="soal14" value="0"  />
-                \((x+3)^2 +(y+6)^2 = -38\)
+                \(A \)
                 <br />
                 <input type="radio" name="soal14" value="0" />
-                \((x+3)^2 +(y-6)^2 = 14\)
+                \(B \)
                 <br />
                 <input type="radio" name="soal14" value="0" />
-                \((x+3)^2 +(y+6)^2 = 36\)
+                \(C \)
                 <br />
                 <input type="radio" name="soal14" value="0" />
-                \((x-3)^2 +(y+6)^2 = 7\)
+                \(D \)
                 <br />
                 <input type="radio" name="soal14" value="10" id="soal14"/>
-                \((x+3)^2 +(y+6)^2 = 7\)
+                \(E \)
                 <hr />
 
-                <li>Jika garis \(x-5y-12=0\) ditranslasikan oleh \(\begin{pmatrix}4\\-5 \end{pmatrix} \), bayangannya berbentuk . . . </li>
+                <li>SOAL 15</li>
                 <input type="radio" name="soal15" value="10" id="soal15" />
-                \(x-5y=41\)
+                \(A\)
                 <br />
                 <input type="radio" name="soal15" value="0" />
-                \(x+5y=41\)
+                \(B \)
                 <br />
                 <input type="radio" name="soal15" value="0" />
-                \(-x+5y=41\)
+                \(C \)
                 <br />
                 <input type="radio" name="soal15" value="0" />
-                \(5x-y=41\)
+                \(D \)
                 <br />
                 <input type="radio" name="soal15" value="0" />
-                \(5x+y=41\)
+                \(E \)
                 <hr />
               </ol>
               <!-- ------------------------------------------------------------------------------------------------------------------- -->
@@ -385,7 +387,7 @@
       <div class="offcanvas-header">
         <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">
           KUNCI JAWABAN <br />
-          Latihan Soal Translasi
+          Latihan Soal Transformasi Geometri I
         </h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
