--- a/transformasi/latihansoal/transgeo1.html
+++ b/transformasi/latihansoal/transgeo1.html
@@ -91,90 +91,189 @@
               <hr />
 
               <ol type="1">
-                <li>SOAL 1</li>
+                <li>Bayangan titik \(P(7,-3) \) oleh translasi \(\begin{pmatrix}  2\\a \end{pmatrix}\) adalah \(P'(-3a,-6).\) Nilai \(a\) adalah . . . </li>
                 <input type="radio" name="soal1" value="0" />
-                \(A \)
-                <br />
-                <input type="radio" name="soal1" value="0" />
-                \(B \)
-                <br />
-                <input type="radio" name="soal1" value="0"  />
-                \(C \)
-                <br />
-                <input type="radio" name="soal1" value="0" />
-                \(D \)
+                \(-5 \)
                 <br />
                 <input type="radio" name="soal1" value="10" id="soal1"/>
-                \(E \)
-                <hr />
-                <!--========================= soal no 2 ===========================================================================-->
-                <li>SOAL 2</li>
+                \(-3 \)
+                <br />
+                <input type="radio" name="soal1" value="0"  />
+                \(-1 \)
+                <br />
+                <input type="radio" name="soal1" value="0" />
+                \(3 \)
+                <br />
+                <input type="radio" name="soal1" value="0" />
+                \(5 \)
+                <br>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
+                Aleternatif Penyelesaian:
+                </button>
+                <div class="collapse" id="collapse1">
+                  <div class="card card-body">
+                    \(P(7,-3) \overset{(2,a)}{\rightarrow} P'(-3a,-6)\)
+                    Berdasarkan aturan translasi,
+                    \(7+2=-3a\)
+                    \(-3+a=-6\)
+                    diperoleh:
+                    \(\to a=\frac{9}{-3}=-3\) atau
+                    \(\to a=-6+3=-3 \)
+                   <b class="text-end"> JAWABAN : B </b>
+                  </div>
+                </div>
+                <hr>
+                <!--========================= soal no 2 
+                ===========================================================================-->
+                <li>Jika garis lurus \(2x-3y+7=0 \) ditranslasi oleh \(\begin{pmatrix}-2\\3 \end{pmatrix} \), bayangannya berbentuk . . . </li>
                 <input type="radio" name="soal2" value="10" id="soal2" />
-                \(A\)
+                \(2x-3y+20=0\)
                 <br />
                 <input type="radio" name="soal2" value="0" />
-                \(B \)
+                \(2x-3y+13=0\)
                 <br />
                 <input type="radio" name="soal2" value="0"  />
-                \(C \)
+                \(2x-3y+6=0\)
                 <br />
                 <input type="radio" name="soal2" value="0" />
-                \(D \)
+                \(3x-2y+13=0 \)
                 <br />
                 <input type="radio" name="soal2" value="0" />
-                \(E \)
+                \(3x-2y+20=0 \)
+                <br>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+                Aleternatif Penyelesaian:
+                </button>
+                <div class="collapse" id="collapse2">
+                  <div class="card card-body">
+                    \(\begin{pmatrix}x\\y\end{pmatrix} \overset{\begin{pmatrix}-2\\3 \end{pmatrix}}{\rightarrow} \begin{pmatrix} x'\\y' \end{pmatrix} \)
+                    diperoleh:
+                    \(x'=x-2 \to x=x'+2 \cdots (1)\)
+                    \(y'=y+3 \to y=y'-3 \cdots (2)\)
+                    (1) dan (2) disubstitusikan ke persamaan \(2x-3y+7=0\), diperoleh:
+                    \(\begin{align} 2(x'+2)-3(y'-3)+7&=0 \\
+                    2x'-4+3y'+9+7&=0\\
+                    2x'-3y'+20 &=0 
+                    \end{align}\)
+                    Jadi, bayangan berbentuk \(2x-3y+20=0\)
+                    <b class="text-end">JAWABAN: A</b>
+                  </div>
+                </div>
                 <hr />
                 <!--================================================== soal no 3 ======================================================-->
-                <li>SOAL 3 </li>
+                <li>Bayangan dari lingkaran \((x-3)^2 + (y+4)^2 =9 \) karena translasi \(\begin{pmatrix}2\\1 \end{pmatrix} \) adalah . . . </li>
                 <input type="radio" name="soal3" value="0"  />
-                \(A \)
+                \(x^2+y^2-10x+6y+9=0 \)
                 <br />
                 <input type="radio" name="soal3" value="0"  />
-                \(B \)
+                \(x^2+y^2-10x+6y+16=0 \)
                 <br />
                 <input type="radio" name="soal3" value="0" />
-                \(C \)
+                \(x^2+y^2-10x+6y+25=0 \)
                 <br />
                 <input type="radio" name="soal3" value="10" id="soal3"/>
-                \(D \)
+                \(x^2+y^2-6x+10y+25=0 \)
                 <br />
                 <input type="radio" name="soal3" value="0" />
-                \(E \)
+                \(x^2+y^2-6x+10y+16=0 \)
+                <br>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+                Aleternatif Penyelesaian:
+                </button>
+                <div class="collapse" id="collapse3">
+                  <div class="card card-body">
+                    \(\begin{pmatrix}x\\y\end{pmatrix} \overset{\begin{pmatrix}2\\1 \end{pmatrix}}{\rightarrow} \begin{pmatrix} x'\\y' \end{pmatrix} \)
+                    diperoleh:
+                    \(x=x'-2 \cdots (1)\)
+                    \(y=y'-1 \cdots (2)\)
+                    (1) dan (2) disubstitusikan ke persamaan awal, diperoleh:
+                    \(\begin{align} (x'-2-3)^2 + (y'+4-1)^2 &= 9 \\
+                    (x'-5)^2 +(y'+3)^2 &= 9\\
+                    (x')^2 + (y')^2 -10x' + 6y' +25 &=0 
+                    \end{align}\)
+                    Jadi, bayangan berbentuk \(x^2 + y^2 -10x+6y+25=0\)
+                    <b class="text-end">JAWABAN: C</b>
+                  </div>
+                </div>
                 <hr />
                 <!-- soal no no4 =================================================================================================-->
-                <li>SOAL 4 </li>
+                <li>Bayangan garis \(y=2x+2\) yang direfleksikan terhadap garis \(y=x\) adalah . . . </li>
                 </li>
                 <input type="radio" name="soal4" value="0" />
-                \(A\)
+                \(x-2y-2=0\)
                 <br />
                 <input type="radio" name="soal4" value="0" />
-                \(B \)
+                \(x-2y-1=0 \)
                 <br />
                 <input type="radio" name="soal4" value="0" />
-                \(C \)
+                \(x-2y+2=0 \)
                 <br />
                 <input type="radio" name="soal4" value="0"  />
-                \(D \)
+                \(x-y+1=0 \)
                 <br />
                 <input type="radio" name="soal4" value="10" id="soal4">
-                \(E \)
+                \(x-y-1=0 \)
+                <br>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
+                Aleternatif Penyelesaian:
+                </button>
+                <div class="collapse" id="collapse4">
+                  <div class="card card-body">
+                    Berdasarkan aturan matriks, diperoleh:
+                    \(\begin{align}
+                    \begin{pmatrix}x\\y \end{pmatrix} &= \begin{pmatrix}0&1 \\ 1&0 \end{pmatrix}^{-1}\begin{pmatrix}x'\\y' \end{pmatrix} \\ &=
+                    \frac{1}{0-1}\begin{pmatrix}0&-1 \\ -1&0 \end{pmatrix}\begin{pmatrix}x'\\y' \end{pmatrix} \\ \begin{pmatrix}x\\y \end{pmatrix} &= \begin{pmatrix}0&1 \\ 1&0 \end{pmatrix}\begin{pmatrix}x'\\y' \end{pmatrix}
+                    \end{align}\)
+                    \(x=y'\) dan \(y=x'\)
+                    disubstitusikan ke persamaan \(y=2x+2 \), diperoleh:
+                    \(x'=2y'+2\)
+                    \(x'-2y'-2=0\)
+                    Jadi, bayangannya adalah \(x-2y-2=0\)
+                    <b class="text-end">JAWABAN: A</b>
+                  </div>
+                </div>
                 <hr />
                 <!-- soal no 5 ================================================================================================-->
-                <li>SOAL 5 </li>
+                <li>Segitiga \(ABC\) dengan koordinat titik \(A(2,1)\), \(B(6,1)\), dan \(C(7,4)\) ditransformasikan dengan matriks transformasi \(\begin{pmatrix}3&1\\0&1 \end{pmatrix}\). Luas bangun hasil transformasi segitiga \(ABC\) sama dengan . . . satuan luas. </li>
                 <input type="radio" name="soal5" value="10" id="soal5"/>
-                \(A\)
+                \(18\)
                 <br />
                 <input type="radio" name="soal5" value="0" />
-                \(B\)
+                \(24\)
                 <br />
                 <input type="radio" name="soal5" value="0"   />
-                \(C\)
+                \(36\)
                 <br />
                 <input type="radio" name="soal5" value="0"/>
-                \(D\)
+                \(28\)
                 <br />
                 <input type="radio" name="soal5" value="0" />
-                \(E\)
+                \(56\)
+                <br>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
+                Aleternatif Penyelesaian:
+                </button>
+                <div class="collapse" id="collapse5">
+                  <div class="card card-body">
+                    <i>CARA 1:</i> (Menentukan bayangan ABC lalu hitung luasnya)
+                    \(\begin{align}
+                     \begin{pmatrix}x_{A'}&x_{B'}&x_{C'} \\ y_{A'}&y_{B'}&y_{C'} \end{pmatrix} &= \begin{pmatrix}3&1\\0&1 \end{pmatrix}\begin{pmatrix}2&6&7\\1&1&4 \end{pmatrix}\\ &= \begin{pmatrix}7&19&25\\1&1&4 \end{pmatrix}
+                    \end{align}\)
+                    \(\begin{align}
+                    \text{Luas }\bigtriangleup A'B'C' &= \frac{1}{2}\begin{vmatrix}7&1\\19&1\\25&4\\7&1 \end{vmatrix}\begin{matrix}A'\\B'\\C'\\A' \end{matrix} 
+                    \\&=\frac{1}{2}|7+(19)(4)+25-19-25=28|
+                    \\&=\frac{1}{2}|(1-4)7+(4-1)19 |
+                    \\&=\frac{1}{2}|-21+57|\\&=\frac{1}{2}.36\\&=18 
+                    \end{align}\)
+                    <i>CARA 2</i> (Menggunakan rumus luas segitiga langsung)
+                    \(\begin{align} 
+                    \text{Luas }\bigtriangleup A'B'C' &= \det \begin{pmatrix}3&1\\0&1 \end{pmatrix} \times \text{Luas }\bigtriangleup ABC \\
+                    &=(3-0)\begin{Bmatrix}\frac{1}{2}\begin{vmatrix}2&1\\6&1\\2&4\\2&1 \end{vmatrix}\begin{matrix}A\\B\\C\\D \end{matrix} \end{Bmatrix}
+                     \\&=3.\frac{1}{2}.|2+24+3-6-3-8| \\&= \frac{3}{2}|26-14 \\&= \frac{3}{2}.12\\&=18 \end{align}\)
+                     Jadi, Luas \(\bigtriangleup A'B'C' = 18\)
+                    <b class="text-end">JAWABAN: A</b>
+                  </div>
+                </div>
                 <hr />
                 <!-- =====SOAL NO 6======================================================================= -->
                 <li>SOAL 6</li>
