--- a/transformasi/daftarsoal.html
+++ b/transformasi/daftarsoal.html
@@ -122,12 +122,12 @@
             <div class="list-group">
               <a href="#" class="list-group-item list-group-item-action active text-center" aria-current="true"> Kumpulan Latihan Soal Transformasi Geometri </a>
               <a href="/transformasi/latihansoal/translasisoal.html" class="list-group-item list-group-item-action">Latihan Translasi</a>
-              <a href="#" class="list-group-item list-group-item-action">Latihan Refleksi</a>
-              <a href="#" class="list-group-item list-group-item-action">Latihan Rotasi</a>
-              <a href="#" class="list-group-item list-group-item-action">Latihan Dilatasi</a>
-              <a href="#" class="list-group-item list-group-item-action">Latihan Transformasi Komposisi</a>
-              <a href="#" class="list-group-item list-group-item-action">Latihan Transformasi Geometri 1</a>
-              <a href="#" class="list-group-item list-group-item-action">Latihan Transformasi Geometri 2</a>
+              <a href="/transformasi/latihansoal/refleksiSoal.html" class="list-group-item list-group-item-action">Latihan Refleksi</a>
+              <a href="/transformasi/latihansoal/rotasiSoal.html" class="list-group-item list-group-item-action">Latihan Rotasi</a>
+              <a href="/transformasi/latihansoal/dilatasiSoal.html" class="list-group-item list-group-item-action">Latihan Dilatasi</a>
+              <a href="/transformasi/latihansoal/tgkomposisi.html" class="list-group-item list-group-item-action">Latihan Transformasi Komposisi</a>
+              <a href="/transformasi/latihansoal/transgeo1.html" class="list-group-item list-group-item-action">Latihan Transformasi Geometri 1</a>
+              <a href="/transformasi/latihansoal/transgeo2.html" class="list-group-item list-group-item-action">Latihan Transformasi Geometri 2</a>
             </div>
           </div>
           <div class="col-md-3 d-block pb-2">
