--- a/transformasi/latihansoal/transgeo1.html
+++ b/transformasi/latihansoal/transgeo1.html
@@ -57,7 +57,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-9" style="padding-top: 5rem;">
-            <h2 class="text-center">Latihan Soal <br> Transformasi Geometri II </h2>
+            <h2 class="text-center">Latihan Soal <br> Transformasi Geometri I </h2>
            <p class="text-center fst-italic"> Math_Dosman</p>
             <form name="translasi01-form">
               <div class="mb-3">
