--- a/daftarisimateri.html
+++ b/daftarisimateri.html
@@ -88,7 +88,7 @@
               <button type="button" class="list-group-item list-group-item-action">Fungsi Kuadrat</button>
               <button type="button" class="list-group-item list-group-item-action">Pertidaksamaan Linear Dua Variabel</button>
               <button type="button" class="list-group-item list-group-item-action">Program Linear</button>
-              <a href="/matriks/" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">Matriks Dasar & Operasi Matriks</button></a>
+              <a href="/kumpulanMateri/matriks/" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">Matriks Dasar & Operasi Matriks</button></a>
               <a href="/transformasi/" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">Transformasi Geometri</button></a>
               <button type="button" class="list-group-item list-group-item-action">Barisan dan Deret</button>
               <button type="button" class="list-group-item list-group-item-action">Limit Fungsi Aljabar</button>
