--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <img src="/home/10programlinear.png" class="d-block w-100 border" alt="a" />
                   </div>
                   <div class="col-lg-4">
-                    <a href="/matriks/"> <img src="/home/9matriks.png" class="d-block w-100 border" alt="a" /></a>
+                    <a href="/kumpulanMateri/matriks/"> <img src="/home/9matriks.png" class="d-block w-100 border" alt="a" /></a>
                   </div>
                   <div class="col-lg-4">
                     <img src="/home/2trigonometri.png" class="d-block w-100 border" alt="a" />
@@ -153,7 +153,7 @@
                     <img src="/home/5persamaangarislurus.png" class="d-block w-100 border" alt="c" />
                   </div>
                   <div class="col-lg-4">
-                   <a href="/matriks/soal/ulanganpaket6.html"> <img src="/home/6vektor.png" class="d-block w-100 border" alt="c" /></a>
+                   <a href="#"> <img src="/home/6vektor.png" class="d-block w-100 border" alt="c" /></a>
                   </div>
                 </div>
               </div>
